# wxpdfdoc

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Makefile.am  Makefile.in  Makefile28.in  Makefile29.in  Readme.txt  configure  configure.ac  configure28  configure29  configure30  index.html  index.php  premake5.lua  premake5_woff2.lua  premake5_zint.lua  readme.md  wxpdfdoc.pc.in  wxwidgets.css
.github/: FUNDING.yml
.github/workflows/: ci4wxpdfdoc.yml
admin/appveyor/: appveyor-test.bat  appveyor.bat
admin/travis/: before_install.sh
build28/: .bakefile_gen.state  GNUmakefile  autoconf_inc.m4  configure.ac  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  wxpdfdoc.bkl  wxpdfdoc_vc6_dcsample.dsp  wxpdfdoc_vc6_minimal.dsp  wxpdfdoc_vc6_pdfdoc.dsp  wxpdfdoc_vc6_showfont.dsp  wxpdfdoc_vc7_dcsample.vcproj  wxpdfdoc_vc7_makefont.vcproj  wxpdfdoc_vc7_minimal.vcproj  wxpdfdoc_vc7_pdfdoc.vcproj  wxpdfdoc_vc7_showfont.vcproj  wxpdfdoc_vc8_dcsample.vcproj  wxpdfdoc_vc8_makefont.vcproj  wxpdfdoc_vc8_minimal.vcproj  wxpdfdoc_vc8_pdfdoc.vcproj  wxpdfdoc_vc8_showfont.vcproj  wxpdfdoc_vc9.sln  wxpdfdoc_vc9_dcsample.vcproj  wxpdfdoc_vc9_makefont.vcproj  wxpdfdoc_vc9_minimal.vcproj  wxpdfdoc_vc9_pdfdoc.vcproj  wxpdfdoc_vc9_showfont.vcproj
build29/: Bakefiles.bkgen  GNUmakefile  autoconf_inc.m4  configure.ac  mac_bundles.bkl  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  samples.bkl  wxpdfdoc.bkl  wxpdfdoc_vc6.dsw  wxpdfdoc_vc6_dcsample.dsp  wxpdfdoc_vc6_makefont.dsp  wxpdfdoc_vc6_minimal.dsp  wxpdfdoc_vc6_pdfdoc.dsp  wxpdfdoc_vc6_showfont.dsp  wxpdfdoc_vc7.sln  wxpdfdoc_vc7_dcsample.vcproj  wxpdfdoc_vc7_makefont.vcproj  wxpdfdoc_vc7_minimal.vcproj  wxpdfdoc_vc7_pdfdoc.vcproj  wxpdfdoc_vc7_showfont.vcproj  wxpdfdoc_vc8.sln  wxpdfdoc_vc8_dcsample.vcproj  wxpdfdoc_vc8_makefont.vcproj  wxpdfdoc_vc8_minimal.vcproj  wxpdfdoc_vc8_pdfdoc.vcproj  wxpdfdoc_vc8_showfont.vcproj  wxpdfdoc_vc9.sln  wxpdfdoc_vc9_dcsample.vcproj  wxpdfdoc_vc9_makefont.vcproj  wxpdfdoc_vc9_minimal.vcproj  wxpdfdoc_vc9_pdfdoc.vcproj  wxpdfdoc_vc9_showfont.vcproj
build30/: Bakefiles.bkgen  GNUmakefile  aclocal.m4  configure.ac  makefile.bcc  makefile.gcc  makefile.vc  makefile.wat  wxpdfdoc.bkl  wxpdfdoc_vc6_dcsample.dsp  wxpdfdoc_vc6_makefont.dsp  wxpdfdoc_vc6_minimal.dsp  wxpdfdoc_vc6_pdfdoc.dsp  wxpdfdoc_vc6_showfont.dsp  wxpdfdoc_vc7.sln  wxpdfdoc_vc7_dcsample.vcproj  wxpdfdoc_vc7_makefont.vcproj  wxpdfdoc_vc7_minimal.vcproj  wxpdfdoc_vc7_pdfdoc.vcproj  wxpdfdoc_vc7_showfont.vcproj  wxpdfdoc_vc8.sln  wxpdfdoc_vc8_dcsample.vcproj  wxpdfdoc_vc8_makefont.vcproj  wxpdfdoc_vc8_minimal.vcproj  wxpdfdoc_vc8_pdfdoc.vcproj  wxpdfdoc_vc8_showfont.vcproj  wxpdfdoc_vc9.sln  wxpdfdoc_vc9_dcsample.vcproj  wxpdfdoc_vc9_makefont.vcproj  wxpdfdoc_vc9_minimal.vcproj  wxpdfdoc_vc9_pdfdoc.vcproj  wxpdfdoc_vc9_showfont.vcproj
docs/: Doxyfile
docs/doxygen-custom/: header.html
docs/html/: annotated.html  annotated_dup.js  classes.html  classwx_pdf_annotation-members.html  classwx_pdf_annotation.html  classwx_pdf_annotation.js  classwx_pdf_annotation_object-members.html  classwx_pdf_annotation_object.html  classwx_pdf_annotation_object.js  classwx_pdf_annotation_widget-members.html  classwx_pdf_annotation_widget.html  classwx_pdf_annotation_widget.js  classwx_pdf_array-members.html  classwx_pdf_array.html  classwx_pdf_array.js  classwx_pdf_axial_gradient-members.html  classwx_pdf_axial_gradient.html  classwx_pdf_axial_gradient.js  classwx_pdf_bar_code_creator-members.html  classwx_pdf_bar_code_creator.html  classwx_pdf_bar_code_creator.js  classwx_pdf_barcode_zint-members.html  classwx_pdf_barcode_zint.html  classwx_pdf_barcode_zint.js  classwx_pdf_bookmark-members.html  classwx_pdf_bookmark.html  classwx_pdf_bookmark.js  (+497 more)
makefont/: GFSDidot.ufm  calligra.afm  cp1252.map  makefont.cpp  makefont.rc
premake/: wxwidgets.lua
samples/: CMakeLists.txt  barcodes.cpp  bookmark.cpp  charting.cpp  cjktest.cpp  clipping.cpp  countries.txt  drawing.cpp  glyphwriting.cpp  gradients.cpp  jsform.cpp  kerning.cpp  labels.cpp  layers.cpp  minimal.cpp  minimal.rc  protection.cpp  rotation.cpp  templates.cpp  transformation.cpp  transparency.cpp  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial5.cpp  tutorial6.cpp  tutorial7.cpp  wmf.cpp  xmlwrite.cpp
samples/gridctrl/: gridctrlsample.cpp  gridctrlsample.h
samples/listctrl/: listctrlsample.cpp  listctrlsample.h
samples/minimal/: 20k_c1.txt  attached.txt  attachment.cpp  barcodes.cpp  bookmark.cpp  charting.cpp  cjktest.cpp  clipping.cpp  countries.txt  drawing.cpp  glyphsample.txt  glyphwriting.cpp  gradients.cpp  indic-assamese.txt  indic-bengali.txt  indic-gujarati.txt  indic-hindi.txt  indic-kannada.txt  indic-malayalam.txt  indic-nepali.txt  indic-oriya.txt  indic-punjabi.txt  indic-tamil.txt  indic-telugu.txt  indicfonts.cpp  jsform.cpp  kerning.cpp  labels.cpp  layers.cpp  minimal.cpp  minimal.rc  protection.cpp  ringmaster.wmf  rotation.cpp  templates.cpp  texturamodern.h  transformation.cpp  transparency.cpp  tutorial1.cpp  tutorial2.cpp  (+7 more)
samples/pdfdc/: mondrian.xpm  printing.cpp  printing.h  printing.rc  test.html
samples/pdfgc/: pdfgc.cpp  pdfgc.h  pdfgc_bitmap.xpm
showfont/: showfont.cpp  showfont.rc  unicodeblocks.h  unicoderanges.h
src/: pdfannotation.cpp  pdfbarcode.cpp  pdfbarcodezint.cpp  pdfcffdecoder.cpp  pdfcffindex.cpp  pdfcjkfontdata.inc  pdfcmapdata.inc  pdfcodepagedata.inc  pdfcolor.cpp  pdfcolordata.inc  pdfcolour.cpp  pdfcolourdata.inc  pdfcorefontdata.inc  pdfcorefontkerning.inc  pdfdc.cpp  pdfdc28.inc  pdfdc29.inc  pdfdecode.cpp  pdfdoc.cpp  pdfdoc_version.rc  pdfdocument.cpp  pdfencoding.cpp  pdfencrypt.cpp  pdffont.cpp  pdffontdata.cpp  pdffontdata.inc  pdffontdatacore.cpp  pdffontdataopentype.cpp  pdffontdatatruetype.cpp  pdffontdatatype0.cpp  pdffontdatatype1.cpp  pdffontdescription.cpp  pdffontdetails.cpp  pdffontextended.cpp  pdffontmanager.cpp  pdffontparser.cpp  pdffontparsertruetype.cpp  pdffontparsertype1.cpp  pdffontsubsetcff.cpp  pdffontsubsettruetype.cpp  (+25 more)
website/: index.php
(+260 files in other folders)
